<resources>
    <string name="app_name">RVF</string>
    <string name="login">LOG IN</string>
    <string name="verify_mobile_number">VERIFY YOUR MOBILE NUMBER</string>
    <string name="ente_your_otp">Enter your otp here</string>
    <string name="login_button">Login</string>
    <string name="user_id">User ID</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="button_continue">Continue</string>
    <string name="otp_expires_in">OTP Expires in</string>
    <string name="password">Password</string>
    <string name="app_store">APP STORE</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="app_version">App Version 1.1.0</string>
    <string name="dummy_app_name">App Name</string>
    <string name="download">Download</string>
    <string name="install">Install</string>
    <string name="open">Open</string>
    <string name="mobile_number">Mobile number</string>
    <string name="company_code">Company Code </string>
    <string name="version">Version</string>
    <string-array name="scheme_code">
        <item>Select Scheme code</item>
    </string-array>
    <string name="make">MAKE</string>
    <string name="state">STATE</string>
    <string-array name="select_applicant_kyc_type">
        <item>Select kyc type</item>
        <item>Aadhaar Card</item>
        <item>Voter-ID</item>
        <item>Driving License</item>
        <item>Passport</item>
        <item>Pan Card</item>
    </string-array>
    <string name="model">MODEL</string>
    <string name="year">YEAR</string>
    <string-array name="model_lead">
        <item>Select Model</item>
        <item>215 Yuvaraj Next</item>
        <item>188 4WD</item>
        <item>YUVRAJ 215 NXT</item>
        <item>SWARAJ 717</item>
        <item>A211N - Big Tyres</item>

    </string-array>
    <string-array name="product_type_lead">
        <item>Select product type</item>
        <item>New Tractor</item>
        <item>Used Tractor</item>a
        <item>Farm Equipment</item>


    </string-array>
    <string-array name="product_details_type">
        <item>Select product type</item>
    </string-array>
    <string-array name="pslcode">
        <item>Select PSL Code</item>
        <item>Small and Marginal farmer</item>
        <item>Small Farmer</item>
        <item>Other farmer</item>a
        <item>Non PSL</item>
    </string-array>
    <string-array name="categorytype">
        <item>Select category</item>
        <item>Applicant</item>
        <item>Co-Applicant</item>
    </string-array>
    <string-array name="select_communication_kyc_type">
        <item>Communication KYC Type</item>
        <item>Aadhaar Card</item>
        <item>Voter-ID</item>
        <item>Driving License</item>
        <item>Passport</item>
        <item>Other</item>
    </string-array>
    <string-array name="select_permanent_kyc_type">
        <item>Communication KYC Type</item>
        <item>Aadhaar Card</item>
        <item>Voter-ID</item>
        <item>Driving License</item>
        <item>Passport</item>
        <item>Pancard</item>
        <item>Other</item>

    </string-array>
    <string-array name="new_tractor_schemecode">
        <item>Select Scheme Code</item>
        <item>RVTRL</item>
        <item>RVTRC</item>
        <item>RVXPS</item>
        <item>RVUTF</item>
        <item>RVEQU</item>
    </string-array>
    <string-array name="used_tractor_schemecode">
        <item>Select Scheme Code</item>
        <item>RVUTF</item>
        <item>RVTRL</item>
        <item>RVTRC</item>
        <item>RVXPS</item>
        <item>RVUTF</item>
        <item>RVEQU</item>
    </string-array>
    <string name="schemecode">SCHEME CODE</string>
    <string-array name="selectownernames">
        <item>Select Name</item>

    </string-array>
    <string-array name="farm_equipment">
        <item>Select Scheme Code</item>
        <item>RVTRL</item>
        <item>RVTRC</item>
        <item>RVXPS</item>
        <item>RVUTF</item>
        <item>RVEQU</item>
    </string-array>
    <string-array name="farm_equipmentmake">
        <item>Select Make</item>
        <item>Combine Harvester (Track Type)</item>
        <item>Combine Harvester (Wheel Type)</item>
        <item>Combine Harvester Box (Tractor Mounted)</item>
    </string-array>
    <string-array name="owner_name">
        <item>Select Owner Name</item>
    </string-array>
    <string-array name="source_of_aquisition">
        <item>Select Source of aquisition</item>
        <item>Dealer</item>
        <item>Direct</item>
        <item>Branch</item>
        <item>DSE</item>
        <item>DSA</item>
        <item>Referrer</item>

    </string-array>
    <string-array name="fi_Relationship_with_Applicant">
        <item>Select Relationship with Applicant</item>
        <item>Spouse</item>
        <item>Father</item>
        <item>Mother</item>
        <item>Daughter</item>
        <item>Son</item>
        <item>Brother</item>
        <item>Sister</item>
        <item>Sister-in-law</item>
        <item>Brother -in-Law</item>
        <item>Mother-in-law</item>
        <item>Father-in-law</item>
    </string-array>
    <string-array name="fi_customer">
        <item>Select Customer Type</item>
        <item>New To Bank</item>
        <item>First Time User </item>
        <item>First Time Buyer</item>
        <item>Repeat Buyer</item>
    </string-array>
    <string-array name="cif_nationality">
        <item>Select  Nationality Type</item>
        <item>Indian</item>
    </string-array>
    <string-array name="cif_religion">
    <item>Select  Religion Type</item>
    <item>Hindu</item>
    <item>Muslim</item>
    <item>Sikh</item>
    <item>Christian</item>
    <item>Buddhism</item>
    <item>Jainism</item>
    </string-array>
    <string-array name="cif_caste">
        <item>Select  Caste Type</item>
        <item>General</item>
        <item>OBC</item>
        <item>SC</item>
        <item>ST</item>
        <item>Others</item>
</string-array>
    <string-array name="cif_community">
        <item>Select  Community Type</item>
        <item>BUDDHIST</item>
        <item>CHRISTIAN</item>
        <item>HINDU</item>
        <item>JAINISM</item>
        <item>JEWIS</item>
        <item>MUSLIM</item>
        <item>ALL OTHER COMMUNITY</item>
        <item>SIKH</item>
        <item>ZORASTRIAN</item>
    </string-array>
    <string-array name="cif_employment_status">
        <item>Select  Employment Status Type</item>
        <item>HOUSEWIFE</item>
        <item>POLITICIAN</item>
        <item>RETRIED</item>
        <item>SALARIED</item>
        <item>SELF-EMPLOYED</item>
        <item>STUDENT</item>
        <item>UNEMPLOYED</item>
        <item>OTHERS</item>
    </string-array>
    <string-array name="cif_nature_of_income">
        <item>Select  Nature of Income Type</item>
        <item>AGRICULTURE</item>
        <item>BUSINESS INCOME</item>
        <item>INVESTMENT INCOME</item>
        <item>SALARY</item>
        <item>OTHERS</item>
    </string-array>
    <string-array name="cif_occupation">
        <item>Select  Occupation Type</item>
        <item>Finance</item>
        <item>Financial Consultant And Data Processing</item>
        <item>Financial Services</item>
        <item>Furniture Trader</item>
        <item>Gems And Precious Metals</item>
        <item>Govt Contactor</item>
        <item>Govt Service</item>
        <item>Harvesting And Transporting Sugarcane</item>
        <item>Hotel</item>
        <item>House Wife</item>
        <item>Industrialist</item>
        <item>Information Technology</item>
        <item>Job Consultancy</item>
        <item>Journalist</item>
        <item>Labour Contract</item>
        <item>Lawyer</item>
        <item>Managerial</item>
        <item>Manufactuiring Of Cloth</item>
        <item>Manufacturing Of Cloth On Job Basis</item>
        <item>Milk Collection Dairy</item>
        <item>Non Working</item>
        <item>Optical Shop</item>
        <item>Pensioner</item>
        <item>Private Sector Employee</item>
        <item>Professional</item>
        <item>Professor</item>
        <item>Property Dealer</item>
        <item>PSU Employee</item>
        <item>Public Utilities And Services</item>
        <item>Publications</item>
        <item>Real Estate Business</item>
        <item>Reseller Of Cattel Feed</item>
        <item>Retail Outlet Of Beer Shoppee</item>
        <item>Retailer</item>
        <item>Retired</item>
        <item>Road Contractor</item>
        <item>Salaried</item>
        <item>Sales</item>
        <item>Self Employed</item>
        <item>Service</item>
        <item>Small Businessman</item>
        <item>Social Worker</item>
        <item>Solicitor</item>
        <item>Student</item>
        <item>Tax Consultant</item>
        <item>Teacher</item>
        <item>Tours And Travels Consultant</item>
        <item>Trader</item>
        <item>Trading Of Cattle Feed</item>
        <item>Transport Operator</item>
        <item>Travelling Business</item>
        <item>Turmeric Merchant And Comm Agent</item>
        <item>Vegetable Vendor</item>
        <item>Water Supplier</item>
        <item>Wholesaler-Ganpati Idol Maker</item>
        <item>Other Technical</item>
        <item>Others</item>
        <item>Academic</item>
        <item>Actor</item>
        <item>Advocate</item>
        <item>Agency</item>
        <item>Agriculture And Allied Activities</item>
        <item>Architect</item>
        <item>Banker</item>
        <item>Broker</item>
        <item>Business</item>
        <item>Business Manufacturing</item>
        <item>Business Other</item>
        <item>Cable Distributor</item>
        <item>Catering</item>
        <item>Chartered Accountant</item>
        <item>Civil Contractor</item>
        <item>Clerical</item>
        <item>Computer Related</item>
        <item>Connector For Lap And Retails Assets</item>
        <item>Construction</item>
        <item>Construction Of Roads - PWD Contractor</item>
        <item>Consultant</item>
        <item>Defence Force</item>
        <item>Doctor/ Dentist</item>
        <item>Electrical Contractor</item>
        <item>Engineer</item>
        <item>Engineering Consultant</item>
        <item>Entrepreneur</item>
        <item>Executive</item>
        <item>Exporter</item>
    </string-array>
    <string-array name="cif_gross_annual_income">
        <item>Select  Gross Annual Income Type</item>
        <item>3Lakh-5Lakhs</item>
    </string-array>
    <string-array name="fi_product_details">
        <item>Select product Type</item>
        <item>New Tractor</item>
        <item>Used Tractor</item>
        <item>Farm Equipment</item>
    </string-array>
    <string-array name="fi_product_source_of_margin_money">
        <item>Select source of margin money type</item>
        <item>Exchange of old Tractor</item>
        <item>Own funds</item>
        <item>Others</item>
    </string-array>
    <string-array name="fi_product_Repayment_frequency">
        <item>Select repayment frequency type</item>
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Half Yearly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="fi_product_bank_deposits">
        <item>Select bank deposits type</item>
        <item>Deposits</item>
        <item>NSC</item>
        <item>KVP</item>
        <item>Others</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Close</string>
    <string-array name="spinner_loan_type">
        <item>Select Loan Type</item>
        <item>JLG</item>
        <item>Individual Loan</item>
        <item>MSME</item>
        <item>TW</item>
    </string-array>
    <string-array name="lead_sort_by_date">
        <item>Sort By Date</item>
        <item>ASC</item>
        <item>DESC</item>
    </string-array>
</resources>