<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@color/colorBackground"
        android:elevation="@dimen/_1sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:src="@drawable/crop_image_menu_crop"
            android:visibility="gone"
            android:scaleType="fitCenter"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:fontFamily="@font/my_custom_font"
                android:textColor="@color/button_color_green"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_to_continue"
                android:layout_marginTop="@dimen/_3sdp"
                android:fontFamily="@font/my_custom_font"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/button_color_green"
                android:gravity="center"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@android:color/white"
                android:src="@drawable/crop_image_menu_crop"/>

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/_5sdp"
            android:clipToPadding="false"
            android:background="@color/colorBorder"
            android:layout_margin="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:elevation="@dimen/_3sdp"
                android:background="@color/colorBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:padding="@dimen/_3sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1">
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:scaleType="fitXY"
                            android:src="@drawable/user"
                            android:background="@color/white"/>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_user_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/my_custom_font"
                        android:layout_marginLeft="@dimen/_1sdp"
                        android:layout_weight="0.1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/user_id"
                            android:textAllCaps="true"
                            android:fontFamily="@font/my_custom_font"
                            android:maxLength="12"
                            android:text=""
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp"
                            android:singleLine="true">
                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/colorBorder"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:padding="@dimen/_3sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1">
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:scaleType="fitXY"
                            android:src="@drawable/password"
                            android:background="@color/white"/>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_company_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_1sdp"
                        android:fontFamily="@font/my_custom_font"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/violet"
                        android:background="@android:color/transparent"
                        android:layout_weight="0.1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/password"
                            android:textAllCaps="true"
                            android:fontFamily="@font/my_custom_font"
                            android:maxLength="12"
                            android:text=""
                            android:inputType="number"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp"
                            android:singleLine="true">
                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:padding="@dimen/_3sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1">
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:scaleType="fitXY"
                            android:src="@drawable/audit"
                            android:background="@color/white"/>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_1sdp"
                        android:fontFamily="@font/my_custom_font"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/violet"
                        android:background="@android:color/transparent"
                        android:layout_weight="0.1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/company_code"
                            android:textAllCaps="true"
                            android:fontFamily="@font/my_custom_font"
                            android:maxLength="12"
                            android:text=""
                            android:inputType="number"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp"
                            android:singleLine="true">
                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/colorBorder"/>

                <Button
                    android:id="@+id/btn_log_in"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/bg_corner_radius"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10ssp"
                    android:layout_marginRight="@dimen/_10ssp"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_13ssp"
                    android:fontFamily="@font/my_custom_font"
                    android:gravity="center"
                    android:text="@string/login_button"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_8sdp"
                    android:layout_margin="@dimen/_10ssp"
                    android:text="@string/app_version"
                    android:textColor="@color/button_color_green"
                    android:fontFamily="@font/my_custom_font"
                    android:gravity="center"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
</LinearLayout>